# expense-notifier

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: actions.yml  ci-cd.yml
docs/: Makefile  conf.py  example.ipynb  make.bat
notebooks/: example.ipynb
src/expense_notify/: __init__.py  expense_notify.py
src/expense_notify/agent/: pandas_agent.py
src/expense_notify/data_loader/: notiondb_loader.py
src/expense_notify/notification/: gmail_service.py  telegram_bot_service.py
src/scripts/: run_workflow.py
tests/: test_expense_notify.py
